# VeriEvol

./: .gitignore  CITATION.bib  README.md  requirements.txt
evolution/: answer_evol_question.py  answer_quality_check.py  classify_topic.py  evolve_question.py  prompt.py  vision_api.py  vote_consistency.py
verifier/: .env.example  README.md  pyproject.toml
verifier/htv_agent/: __init__.py  agent.py  checks.py  cli.py  io_utils.py  json_utils.py  llm.py  pipeline.py  schemas.py  settings.py  tools.py
