[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "htv-agent"
version = "0.1.0"
description = "HTV-Agent: hypothesis--test answer verification for VeriEvol (refutation-first, abstain-first)."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "jsonschema>=4.26.0,<5",
  "langgraph>=1.0.0,<2",
  "langgraph-checkpoint-sqlite>=3.0.3,<4",
  "openai>=1.0.0",
  "Pillow>=10.0.0",
  "pydantic>=2.11.0,<3",
  "pydantic-settings>=2.13.1,<3",
]

[project.optional-dependencies]
dev = ["pytest>=8.3.0,<9"]

[project.scripts]
htv-agent = "htv_agent.cli:main"

[tool.setuptools.packages.find]
include = ["htv_agent*"]
